traeffik/hello-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-ingressroute-tr
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: hello-service
      port: hello-port
      sticky:
        cookie:
          httpOnly: true
          name: pester
